Fix clipping nav bar issue

--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,32 @@
 body {
 	color: #333333;
 	background-color: #EEEEEE;
-	line-height: 1.5;
+	line-height: 1.8;
 	font-size: 16px;
 	font-family: 'noto sans', arial, sans-serif;
 }
 
 p {
-	margin: 0 0 10px;
+	margin: 0 0 20px;
+}
+
+.nav {
+	width: 650px;
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-end;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 20px;
 }
 
 .container {
 	display: flex;
 	flex-direction: column;
 	width: 650px;
-	height: 100%;
+	height: calc(100% - 70px);
 	margin-left: auto;
 	margin-right: auto;
-	/*margin-top: 30px;*/
-}
-
-.nav {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: flex-end;
 }
 
 .name {
@@ -51,7 +53,7 @@ p {
 .links #contact {
 	border-style: solid;
 	border-width: 1.5px;
-	padding: 0 8 0 6;
+	padding: 0 8 0 8;
 	font-weight: bold;
 }
 
@@ -65,14 +67,10 @@ p {
 }
 
 .bottom-bar {
+	padding: 10 0 5 0;
 	align-self: center;
 }
 
 .bottom-img {
 	width: 30px;
-}
-
-.bottom-img a {
-	text-decoration: none;
-	border: 0;
 }
